--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
