--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3308/group18
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://ys9bm7y9r2lm2ohf:i49kinarw8nwfvfr@j8oay8teq9xaycnm.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/av1qhiwm51te37oc?reconnect=true
+spring.datasource.username=ys9bm7y9r2lm2ohf
+spring.datasource.password=i49kinarw8nwfvfr
+server.port=8080
