--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url=jdbc:mysql://ys9bm7y9r2lm2ohf:i49kinarw8nwfvfr@j8oay8teq9xaycnm.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/av1qhiwm51te37oc?reconnect=true
 spring.datasource.username=ys9bm7y9r2lm2ohf
 spring.datasource.password=i49kinarw8nwfvfr
+
+#spring.datasource.url=jdbc:mysql://localhost:3308/cs4351?reconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=password
+
 server.port=8080
