--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
+    "uuid": "^8.3.2",
     "xml2js": "^0.4.23"
   }
 }
